# GBAEmu

./: .gitignore  CMakeLists.txt  README.md  cheats.txt  config.txt  imgui.ini  main.cpp  main_test.cpp  rom_db.TXT  test.save
ImGui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer.cpp
ImGui/misc/cpp/: imgui_stdlib.cpp
apu/: APU.hpp  BaseChannel.hpp  Envelope.hpp  LenCounter.hpp  NoiseChannel.hpp  Sequencer.hpp  SquareChannel.hpp  Sweep.hpp  WaveChannel.hpp
assets/: base.frag  base.vert
audio_device/: AudioDevice.cpp  AudioDevice.hpp
audio_device/filters/: HighPassFilter.hpp  LowPassFilter.hpp
audio_device/sdl/: SdlAudioDevice.cpp  SdlAudioDevice.hpp
common/: BitManip.hpp  DebugCommon.hpp  Defs.hpp  Error.hpp  ImGuiColors.hpp  LINKS.txt  Logger.hpp  static_for.hpp
config/: Config.cpp  Config.hpp
cpu/: ProcessorDefs.h  ProcessorDefs.hpp
cpu/arm/: ARM_Implementation.h  ARM_Implementation.hpp  Instruction.hpp  TableGen.hpp
cpu/core/: ARM7TDI.hpp  CPSR.hpp  CPUContext.hpp  Pipeline.hpp  Register.hpp
cpu/thumb/: Instruction.hpp  THUMB_Implementation.hpp  TableGen2.hpp
debugger/: DebugStructures.hpp  DebugWindow.cpp  DebugWindow.hpp  Debugger.cpp  Debugger.hpp  DisassembleARM.cpp  DisassembleARM.hpp  DisassembleTHUMB.cpp  DisassembleTHUMB.hpp
emu/: ActionReplay.cpp  ActionReplay.hpp  Cheats.cpp  Cheats.hpp  CodeBreaker.cpp  CodeBreaker.hpp  Emulator.cpp  Emulator.hpp  GameShark.cpp  GameShark.hpp  SaveState.cpp  SaveState.hpp
gamepack/: GamePack.hpp  Header.hpp
gamepack/backups/: Backup.hpp  Database.hpp  EEPROM.hpp  Flash.hpp  SRAM.hpp
gamepack/gpio/: Gpio.hpp  GpioDeviceBase.hpp  RTC.hpp
gamepack/mapping/: FileMapping.hpp  linux.hpp  windows.hpp
memory/: Bus.hpp  DMAFireType.hpp  DirectMemoryAccess.hpp  EventScheduler.hpp  InterruptController.hpp  Keypad.hpp  MMIO.hpp  Timers.hpp  Timing.hpp
ppu/: ModeUtils.inl  PPU.hpp
shared_obj/: ProcedureWrapper.hpp  SharedObject.cpp  SharedObject.hpp  WinOpenglLoader.cpp  WinOpenglLoader.hpp
source/apu/: APU.cpp  Envelope.cpp  LenCounter.cpp  NoiseChannel.cpp  Sequencer.cpp  SquareChannel.cpp  Sweep.cpp  WaveChannel.cpp
source/common/: BitManip.cpp  Error.cpp  Logger.cpp
source/cpu/arm/: ARM_Implementation.cpp
source/cpu/core/: ARM7TDI.cpp  Pipeline.cpp  Register.cpp
source/cpu/thumb/: THUMB_Implementation.cpp
source/gamepack/: GamePack.cpp  Header.cpp
source/gamepack/backups/: Database.cpp  EEPROM.cpp  Flash.cpp  SRAM.cpp
source/gamepack/gpio/: Gpio.cpp  RTC.cpp
source/gamepack/mapping/: FileMapping.cpp  linux.cpp  windows.cpp
source/memory/: Bus.cpp  DirectMemoryAccess.cpp  EventScheduler.cpp  InterruptController.cpp  Keypad.cpp  MMIO.cpp  Prefetch.cpp  Timers.cpp  Timing.cpp
source/ppu/: Mode0.cpp  Mode1.cpp  Mode2.cpp  Mode3.cpp  Mode4.cpp  Mode5.cpp  ModeUtils.cpp  Objects.cpp  PPU.cpp
video/: VideoOutput.hpp
video/renderers/: OpenGL_Renderer.cpp  OpenGL_Renderer.hpp
video/renderers/detail/: OpengGLFunctions.hpp
